--- a/Day 2/SingleLinkedList.ipynb
+++ b/Day 2/SingleLinkedList.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "3734ca72-baaf-4033-9491-505c005dc60b",
    "metadata": {},
    "outputs": [],
@@ -35,25 +35,37 @@
     "\n",
     "        self.tail = node\n",
     "    \n",
-    "    def print_list(self):\n",
-    "        if self.head is None:\n",
-    "            return []\n",
-    "        else:\n",
-    "            temp = []\n",
-    "            while self.head.next:\n",
-    "                temp.append(self.head.data)\n",
-    "                print(temp)\n",
+    "    def print(self):\n",
+    "        \n",
+    "        node = self.head\n",
+    "        while node:\n",
+    "            print(node.data, end=' ')\n",
+    "            node = node.next\n",
+    "        \n",
+    "    # using iteration\n",
+    "    def delete(self, position=0):\n",
+    "        \n",
+    "        node = self.head\n",
+    "        if position == 0:\n",
+    "            self.head = node.next\n",
     "            \n",
-    "            return temp"
+    "            return\n",
+    "        \n",
+    "        count = 0\n",
+    "        while node:\n",
+    "            count += 1\n",
+    "            \n",
+    "            if count == position:\n",
+    "                del_node = node.next\n",
+    "                node.next = del_node.next\n",
+    "                \n",
+    "                return\n",
+    "                \n",
+    "            node = node.next\n",
+    "        \n",
+    "        \n",
+    "        "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f844be5-d3a5-4295-b2bc-e994473b506f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -67,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "1079dc90-1a5d-46bd-987e-c8c3436f1a3d",
    "metadata": {},
    "outputs": [],
@@ -79,42 +91,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "3e6410a5-acd4-4577-ac9f-9217ffc6a468",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IOPub data rate exceeded.\n",
-      "The Jupyter server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--ServerApp.iopub_data_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "ServerApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
-      "ServerApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mD:\\temp\\Users\\ipykernel_7364\\3840463513.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mllist\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprint_list\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mD:\\temp\\Users\\ipykernel_7364\\1936990862.py\u001b[0m in \u001b[0;36mprint_list\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     21\u001b[0m             \u001b[1;32mwhile\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m                 \u001b[0mtemp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mtemp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32md:\\myworks\\pythonworks\\datastructure\\ame\\venv\\lib\\site-packages\\ipykernel\\iostream.py\u001b[0m in \u001b[0;36mwrite\u001b[1;34m(self, string)\u001b[0m\n\u001b[0;32m    526\u001b[0m         \"\"\"\n\u001b[0;32m    527\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 528\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    529\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"write() argument must be str, not {type(string)}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    530\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "1 5 6 8 9 "
      ]
     }
    ],
    "source": [
-    "llist.print_list()"
+    "llist.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1780a29b-3e33-43fc-a2d1-205750f8d187",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llist.delete(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f7659261-6cea-452f-9de8-ceb28fb311a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 5 8 9 "
+     ]
+    }
+   ],
+   "source": [
+    "llist.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9034fcb3-3b54-4bd6-aa59-b3de51fad491",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llist.delete(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8b897f41-a4a1-4d1f-9db7-c60ffca27743",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 "
+     ]
+    }
+   ],
+   "source": [
+    "llist.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e556a476-d75e-4b25-a8d8-ddcf501d5122",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "12345\n",
+    "54321\n",
+    "\n",
+    "from copy import deepcopy\n",
+    "def reverse(llist):\n",
+    "    # Write your code here\n",
+    "    \n",
+    "    curr_node = llist\n",
+    "    prev_node = None\n",
+    "    next_node = llist.next\n",
+    "    \n",
+    "    while next_node:\n",
+    "        next_node = curr_node.next\n",
+    "        curr_node.next = prev_node\n",
+    "        prev_node = curr_node\n",
+    "        \n",
+    "        \n",
+    "    return curr_node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06f5b2fa-c52d-4850-a342-9f8629d4a9b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llist = SinglyLinkedList()\n",
+    "for data in a:\n",
+    "    llist.insert_node(data)\n",
+    "    \n",
+    "llist.print()\n",
+    "l = reverse(llist.head)\n",
+    "while l:\n",
+    "    print(l.data, end =' ')\n",
+    "    l = l.next"
    ]
   }
  ],
@@ -134,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
