Added big O notations sheet

--- a/Day 2/List.ipynb
+++ b/Day 2/List.ipynb
@@ -492,6 +492,59 @@
    "source": [
     "l4.copy()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3da2a2b-6815-4b7b-9123-f0285657d72e",
+   "metadata": {},
+   "source": [
+    "## inbuild functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "09f8e194-130b-4215-a25e-127c2f9ee6e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(1,11))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d188cd8e-18d2-49df-b7a2-342a7d65aa1b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a91ef468-cdb9-407a-b550-44ee4fd5cc91",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "566ce0b1-4c2f-4081-a60f-0b036889dfb6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
