--- a/Day 2/SingleLinkedList.ipynb
+++ b/Day 2/SingleLinkedList.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "9d17affc-1d41-4024-98c2-4cc24ca54fb7",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "3734ca72-baaf-4033-9491-505c005dc60b",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "e15e7949-8aab-4ad4-969c-20dd22f8ecea",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "1079dc90-1a5d-46bd-987e-c8c3436f1a3d",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "3e6410a5-acd4-4577-ac9f-9217ffc6a468",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "1780a29b-3e33-43fc-a2d1-205750f8d187",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "f7659261-6cea-452f-9de8-ceb28fb311a2",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "9034fcb3-3b54-4bd6-aa59-b3de51fad491",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "8b897f41-a4a1-4d1f-9db7-c60ffca27743",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 "
+      "1 5 9 "
      ]
     }
    ],
@@ -165,13 +165,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "e556a476-d75e-4b25-a8d8-ddcf501d5122",
    "metadata": {},
    "outputs": [],
    "source": [
-    "12345\n",
-    "54321\n",
+    "# 12345\n",
+    "# 54321\n",
     "\n",
     "from copy import deepcopy\n",
     "def reverse(llist):\n",
@@ -179,30 +179,42 @@
     "    \n",
     "    curr_node = llist\n",
     "    prev_node = None\n",
-    "    next_node = llist.next\n",
+    "    next_node = None\n",
     "    \n",
     "    while next_node:\n",
     "        next_node = curr_node.next\n",
-    "        curr_node.next = prev_node\n",
     "        prev_node = curr_node\n",
+    "        curr_node.next = prev_node\n",
+    "        curr_node = next_node\n",
     "        \n",
     "        \n",
-    "    return curr_node"
+    "    return llist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "06f5b2fa-c52d-4850-a342-9f8629d4a9b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 5 6 8 9 \n",
+      "\n",
+      "1 5 6 8 9 "
+     ]
+    }
+   ],
    "source": [
-    "llist = SinglyLinkedList()\n",
+    "llist1 = SinglyLinkedList()\n",
     "for data in a:\n",
-    "    llist.insert_node(data)\n",
+    "    llist1.insert_node(data)\n",
     "    \n",
     "llist.print()\n",
-    "l = reverse(llist.head)\n",
+    "print('\\n')\n",
+    "l = reverse(llist1.head)\n",
     "while l:\n",
     "    print(l.data, end =' ')\n",
     "    l = l.next"
@@ -225,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
