in array added dynamic array

--- a/Day 2/List.ipynb
+++ b/Day 2/List.ipynb
@@ -539,9 +539,239 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "abdbe162-f2a2-4424-98e0-35490f6a72b1",
+   "metadata": {},
+   "source": [
+    "## Dynamic Array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35ce8f71-bdd6-4a44-8972-9ec1a66dd2d1",
+   "metadata": {},
+   "source": [
+    "sole purpose of dynamic array is to understand how python list auto-increment its capacity or size on running out of existing allotcated memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "6ef9ae7c-12dd-4ea7-ac91-cc81969eeeef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ctypes\n",
+    "\n",
+    "class DyanamicArray:\n",
+    "    \n",
+    "    def __init__(self, size=1):\n",
+    "        \n",
+    "        self.length = 0\n",
+    "        self.capacity = size\n",
+    "        self.array = self.make_array(self.capacity)\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        \n",
+    "        return self.length\n",
+    "        \n",
+    "    def __getitem__(self, index):\n",
+    "        \n",
+    "        if not 0 <= index < self.length:\n",
+    "            raise IndexError(f'bad index {index}')\n",
+    "            \n",
+    "        return self.array[index]\n",
+    "    \n",
+    "    def append(self, item):\n",
+    "        \n",
+    "        if self.length == self.capacity:\n",
+    "            self._resize(self.capacity * 2)\n",
+    "            \n",
+    "        self.array[self.length] = item\n",
+    "        self.length += 1\n",
+    "            \n",
+    "    def _resize(self, size):\n",
+    "        \n",
+    "        temp = self.make_array(size)\n",
+    "        \n",
+    "        for i in range(self.length):\n",
+    "            temp[i] = self.array[i]\n",
+    "            \n",
+    "        self.array = temp\n",
+    "        self.capacity = size\n",
+    "        \n",
+    "    def make_array(self, size):\n",
+    "        \n",
+    "        return (size*ctypes.py_object)()\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        \n",
+    "        return str(self.array)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "d2aa1968-0567-45d6-bd2a-1843b80dd683",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = DyanamicArray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "5d31e2cc-a621-41f8-8fd0-7f705ecaa50e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.DyanamicArray"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "d92bc1d9-4ac2-456e-81c7-ac744ee9a36d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    arr.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "fe08e13a-0663-4ab1-b41d-42a365007691",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.DyanamicArray at 0x10f647040>"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "d3801ac5-b574-430b-8a83-7edb39b754a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "8\n",
+      "16\n",
+      "32\n",
+      "32\n",
+      "64\n",
+      "64\n",
+      "64\n",
+      "64\n",
+      "128\n",
+      "128\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.py_object_Array_16 object at 0x10fbff1c0>"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from ctypes import sizeof\n",
+    "from sys import getsizeof\n",
+    "\n",
+    "arr1 = DyanamicArray()\n",
+    "print(sizeof(arr1.array))\n",
+    "\n",
+    "for i in range(10):\n",
+    "    \n",
+    "    arr1.append(i)\n",
+    "    print(sizeof(arr1.array))\n",
+    "arr1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "f6838e11-3fd1-4f08-b2ad-b90fceb7a59d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56\n",
+      "88\n",
+      "88\n",
+      "88\n",
+      "88\n",
+      "120\n",
+      "120\n",
+      "120\n",
+      "120\n",
+      "184\n",
+      "184\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "arr2 = []\n",
+    "print(sys.getsizeof(arr2))\n",
+    "\n",
+    "for i in range(10):\n",
+    "    \n",
+    "    arr2.append(i)\n",
+    "    print(sys.getsizeof(arr2))\n",
+    "arr2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "566ce0b1-4c2f-4081-a60f-0b036889dfb6",
+   "id": "5b0bb6b8-ea47-4632-98f0-704b95a1a4da",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -563,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
