In array added anagram problem solution

--- a/Day 2/List.ipynb
+++ b/Day 2/List.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "id": "4c1beb51-7496-4155-b90b-3c521d3e27de",
    "metadata": {
-    "toc-hr-collapsed": true
+    "tags": []
    },
    "source": [
     "## list attributes"
@@ -496,7 +496,9 @@
   {
    "cell_type": "markdown",
    "id": "f3da2a2b-6815-4b7b-9123-f0285657d72e",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "## inbuild functions"
    ]
@@ -769,12 +771,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "286622a4-f9a0-4150-a9bc-50f75114e3c6",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Questions ??"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c42a0952-c5cb-4847-9b77-b6754e130b32",
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
+   "source": [
+    "### Anagram Test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5b0bb6b8-ea47-4632-98f0-704b95a1a4da",
+   "execution_count": 42,
+   "id": "9fec79dd-6b9e-4f6a-9c00-0c008022ca11",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def check_anagram(s1, s2):\n",
+    "    \"\"\" Like 'dog' is anagram of 'god'\n",
+    "    \n",
+    "        Ignoring all the spaces\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \n",
+    "    s1 = s1.replace(' ', '')\n",
+    "    s2 = s2.replace(' ', '')\n",
+    "    \n",
+    "    if len(s1) == len(s2):\n",
+    "        \n",
+    "        for i in s1:\n",
+    "            s2 = s2.replace(i, '', 1)\n",
+    "        \n",
+    "        if len(s2) == 0:\n",
+    "            return True\n",
+    "        \n",
+    "    return False\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "fa74c207-112f-4e02-8093-ca2fb276c1c0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_anagram('dog', 'god')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "c373f8df-f77d-4a06-a05a-fac34167cd01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_anagram('go go go', 'gggooo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "15d486df-14f2-4fe5-84a7-f76a96f6b3f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_anagram('public relations', 'crap built on lies')"
+   ]
   }
  ],
  "metadata": {
