--- a/Day 2/List.ipynb
+++ b/Day 2/List.ipynb
@@ -801,12 +801,17 @@
     "    \"\"\" Like 'dog' is anagram of 'god'\n",
     "    \n",
     "        Ignoring all the spaces\n",
+    "        \n",
+    "        Time complexity = O(n)\n",
+    "        Space complexity = O(1)\n",
     "    \n",
     "    \"\"\"\n",
     "    \n",
     "    \n",
     "    s1 = s1.replace(' ', '')\n",
     "    s2 = s2.replace(' ', '')\n",
+    "    \n",
+    "    # return sorted(s1) == sorted(s2) # solution 1\n",
     "    \n",
     "    if len(s1) == len(s2):\n",
     "        \n",
@@ -886,6 +891,77 @@
    ],
    "source": [
     "check_anagram('public relations', 'crap built on lies')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca0774a1-0db6-4f97-a643-cea14aaf4fd8",
+   "metadata": {},
+   "source": [
+    "### Array Pair Sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "18dd384f-871f-4721-9d19-400d7bedb6dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_array_pair(arr: list, k:int) -> list:\n",
+    "    \"\"\" arr = [1,3,2,2] k = 4\n",
+    "    \n",
+    "        return (1,3) and (2,2)\n",
+    "        \n",
+    "        the method should return unique pairs that have summation equal to 'k'\n",
+    "        \n",
+    "        Time complexity = O(n)\n",
+    "        Space complexity = \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    output = set()\n",
+    "    seen = set()\n",
+    "    \n",
+    "    if len(arr) < 2:\n",
+    "        return output\n",
+    "    \n",
+    "    \n",
+    "    for num in arr:\n",
+    "        \n",
+    "        target = k - num\n",
+    "        \n",
+    "        if target not in arr or target in seen:\n",
+    "            seen.add(num)\n",
+    "        else:\n",
+    "            output.add( (  min(num, target), max(num, target)  ) )\n",
+    "        \n",
+    "    return output\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f28eda4e-714e-4ac5-92d1-75447bf2cce6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(1, 3), (2, 2)}\n",
+      "{(-1, 11), (5, 5), (3, 7), (4, 6), (1, 9), (2, 8)}\n",
+      "{(1, 2)}\n",
+      "{(1, 3), (2, 2)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_array_pair([1,3,2,2], 4))\n",
+    "print(get_array_pair([1,9,2,8,3,7,4,6,5,5,13,14,11,13,-1],10))\n",
+    "print(get_array_pair([1,2,3,1],3))\n",
+    "print(get_array_pair([1,3,2,2],4))"
    ]
   }
  ],
