Added stacks and workout interview problems

--- a/Day 2/Stacks.ipynb
+++ b/Day 2/Stacks.ipynb
@@ -1,11 +1,96 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stacks"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Stacks:\n",
+    "\n",
+    "    def __init__(self) -> None:\n",
+    "        self.item = []\n",
+    "\n",
+    "    def push(self, obj):\n",
+    "        self.item.append(obj)\n",
+    "\n",
+    "    def pop(self):\n",
+    "        self.item.pop()\n",
+    "    \n",
+    "    def peek(self):\n",
+    "        return self.item[-1]\n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        return self.item == []\n",
+    "\n",
+    "    def size(self):\n",
+    "        return len(self.item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = Stacks()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.push(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.peek()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Stacks at 0x10bac55e0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +100,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.9"
   },
   "orig_nbformat": 4,
