--- a/Day 2/List.ipynb
+++ b/Day 2/List.ipynb
@@ -313,10 +313,10 @@
      "evalue": "4 is not in list",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mD:\\temp\\Users\\ipykernel_14544\\2738427002.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ml2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# retuns the index of element 4 in the list[0:2], if not found then raises ValueError\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: 4 is not in list"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/sayantan.mandal/Documents/my_works/python_works/py-data-structures/Day 2/List.ipynb Cell 21\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sayantan.mandal/Documents/my_works/python_works/py-data-structures/Day%202/List.ipynb#X26sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m l2\u001b[39m.\u001b[39;49mindex(\u001b[39m4\u001b[39;49m, \u001b[39m0\u001b[39;49m, \u001b[39m2\u001b[39;49m)\n",
+      "\u001b[0;31mValueError\u001b[0m: 4 is not in list"
      ]
     }
    ],
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e48a5857-86c8-4da7-9eeb-b5613dc8eb4a",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "1caeccb6-929c-4859-b78b-c7f68d77fa82",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "72930f76-44df-4d6e-b6ed-fb00e3f4d238",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "7633d1d8-3505-4db4-b9ea-4af72fe3fa34",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3b7bcae1-24d0-4957-b545-8536d43cbbc4",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "4995e974-2e6e-45b2-b350-397037c9a361",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "09f8e194-130b-4215-a25e-127c2f9ee6e2",
    "metadata": {},
    "outputs": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "6ef9ae7c-12dd-4ea7-ac91-cc81969eeeef",
    "metadata": {},
    "outputs": [],
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "d2aa1968-0567-45d6-bd2a-1843b80dd683",
    "metadata": {},
    "outputs": [],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "5d31e2cc-a621-41f8-8fd0-7f705ecaa50e",
    "metadata": {},
    "outputs": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "d92bc1d9-4ac2-456e-81c7-ac744ee9a36d",
    "metadata": {},
    "outputs": [],
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "fe08e13a-0663-4ab1-b41d-42a365007691",
    "metadata": {},
    "outputs": [
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "d3801ac5-b574-430b-8a83-7edb39b754a2",
    "metadata": {},
    "outputs": [
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "f6838e11-3fd1-4f08-b2ad-b90fceb7a59d",
    "metadata": {},
    "outputs": [
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "9fec79dd-6b9e-4f6a-9c00-0c008022ca11",
    "metadata": {},
    "outputs": [],
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "fa74c207-112f-4e02-8093-ca2fb276c1c0",
    "metadata": {
     "tags": []
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "c373f8df-f77d-4a06-a05a-fac34167cd01",
    "metadata": {},
    "outputs": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "15d486df-14f2-4fe5-84a7-f76a96f6b3f1",
    "metadata": {},
    "outputs": [
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "18dd384f-871f-4721-9d19-400d7bedb6dd",
    "metadata": {},
    "outputs": [],
@@ -930,7 +930,7 @@
     "        \n",
     "        target = k - num\n",
     "        \n",
-    "        if target not in arr or target in seen:\n",
+    "        if target not in arr:\n",
     "            seen.add(num)\n",
     "        else:\n",
     "            output.add( (  min(num, target), max(num, target)  ) )\n",
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "f28eda4e-714e-4ac5-92d1-75447bf2cce6",
    "metadata": {},
    "outputs": [
@@ -963,11 +963,396 @@
     "print(get_array_pair([1,2,3,1],3))\n",
     "print(get_array_pair([1,3,2,2],4))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c953156",
+   "metadata": {},
+   "source": [
+    "### find missing nos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "beb08ffb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from re import A\n",
+    "\n",
+    "\n",
+    "def finder(arr1, arr2):\n",
+    "\n",
+    "    missing_no = []\n",
+    "    for item in arr1:\n",
+    "        try:\n",
+    "            i = arr2.index(item)\n",
+    "            arr2.pop(i)\n",
+    "        except ValueError as e:\n",
+    "            missing_no.append(item)\n",
+    "    \n",
+    "    return missing_no\n",
+    "\n",
+    "def finder2(arr1, arr2):\n",
+    "    \n",
+    "    missing = 0\n",
+    "    for num in arr1 + arr2:\n",
+    "        missing^= num\n",
+    "        print(missing)\n",
+    "    \n",
+    "    return missing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "228318d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finder([1,2,3], [1,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f116b64a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finder([5,5,7,7], [5,7,7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1a982e79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "0\n",
+      "4\n",
+      "1\n",
+      "7\n",
+      "0\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "7\n",
+      "3\n",
+      "5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finder2([1,2,3,4,5,6,7], [3,7,2,1,4,6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9ed3d2dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 ^ 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8ed65b94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 ^ 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be84c87d",
+   "metadata": {},
+   "source": [
+    "### largest continuous sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "09a52d9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# O(n**2)\n",
+    "\n",
+    "def large_sum(arr):\n",
+    "\n",
+    "    sum_max = sum(arr)\n",
+    "\n",
+    "    for iter in range(len(arr)):\n",
+    "        temp = 0\n",
+    "        last = 0\n",
+    "        for item in arr[iter:]:\n",
+    "            temp += item\n",
+    "            \n",
+    "            if temp >= sum_max:\n",
+    "                last = temp\n",
+    "            else:\n",
+    "                pass\n",
+    "\n",
+    "def large_sum2(arr):\n",
+    "\n",
+    "    if len(arr) == 0:\n",
+    "        return 0\n",
+    "    \n",
+    "    max_sum = current_sum = arr[0]\n",
+    "\n",
+    "    for item in arr[1:]:\n",
+    "        current_sum = max(current_sum+item , item)\n",
+    "        max_sum = max(current_sum, max_sum)\n",
+    "\n",
+    "    return max_sum\n",
+    "    \n",
+    "large_sum2([1,2,3,4,5,6])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1de0ed37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "large_sum2([1,2,-1,3,4,10,10,-10,-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f14cdcb",
+   "metadata": {},
+   "source": [
+    "### Sentence Reversal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "6976677f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'here it got is this'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## O(n)\n",
+    "\n",
+    "def sentence_reverse(text: str) -> str:\n",
+    "\n",
+    "    return ' '.join(reversed(text.split()))\n",
+    "\n",
+    "## O(n)\n",
+    "## space O()\n",
+    "def manual_sentence_reversal(text: str) -> str:\n",
+    "\n",
+    "    text_list = []\n",
+    "\n",
+    "    data = ''\n",
+    "    for i in text:\n",
+    "        if i == ' ':\n",
+    "            if data != '':\n",
+    "                text_list.append(data)\n",
+    "                data = ''\n",
+    "        else:\n",
+    "            data += i\n",
+    "\n",
+    "    rev_list = []\n",
+    "    for i in text_list:\n",
+    "        rev_list.insert(0, i)\n",
+    "\n",
+    "    data = ''\n",
+    "    for i in rev_list:\n",
+    "        if data == '':\n",
+    "            data += i\n",
+    "        else:\n",
+    "            data += ' ' + i\n",
+    "\n",
+    "    return data\n",
+    "            \n",
+    "\n",
+    "# sentence_reverse(' this is      here    ')\n",
+    "manual_sentence_reversal(' this             is    got it   here    ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e091866",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c6acfc1",
+   "metadata": {},
+   "source": [
+    "### String Compression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "8f59e5a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A4a4B1'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def string_compress(text: str) -> str:\n",
+    "\n",
+    "    seen = []\n",
+    "    count_text = {}\n",
+    "\n",
+    "    for i in text:\n",
+    "        if i not in seen:\n",
+    "            seen.append(i)\n",
+    "            count_text[i] = 1\n",
+    "        else:\n",
+    "            count_text[i] += 1\n",
+    "\n",
+    "    data = ''\n",
+    "    for k,v in count_text.items():\n",
+    "        data += k + str(v)\n",
+    "    \n",
+    "    return data\n",
+    "\n",
+    "string_compress('AAAAaaaaB')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bede882",
+   "metadata": {},
+   "source": [
+    "### Duplicate Char"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e75c907c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_duplicate(text: str) -> str:\n",
+    "\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.9 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -982,6 +1367,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3a2b94eab880d9510ce6ab088e2527b76546ed0dee7591e5d5a7ce69e4d46df7"
+   }
   }
  },
  "nbformat": 4,
