--- a/Day 2/SingleLinkedList.ipynb
+++ b/Day 2/SingleLinkedList.ipynb
@@ -223,7 +223,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.9 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -238,6 +238,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3a2b94eab880d9510ce6ab088e2527b76546ed0dee7591e5d5a7ce69e4d46df7"
+   }
   }
  },
  "nbformat": 4,
