List lecture complete with interview questions

--- a/Day 2/List.ipynb
+++ b/Day 2/List.ipynb
@@ -1339,14 +1339,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e75c907c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def get_duplicate(text: str) -> str:\n",
+    "def get_duplicate(text: str) -> bool:\n",
     "\n",
-    "    pass"
+    "    ## aabc -> a\n",
+    "    seen = []\n",
+    "    duplicate = []\n",
+    "\n",
+    "    for i in text:\n",
+    "        if i in seen:\n",
+    "            duplicate.append(i)\n",
+    "        else:\n",
+    "            seen.append(i)\n",
+    "\n",
+    "    return duplicate == []\n",
+    "\n",
+    "\n",
+    "def adv_duplicate(text: str) -> bool:\n",
+    "\n",
+    "    return len(set(text)) == len(text)\n",
+    "\n",
+    "\n",
+    "\n",
+    "adv_duplicate('alcc')"
    ]
   }
  ],
