--- a/Day 2/String.ipynb
+++ b/Day 2/String.ipynb
@@ -233,28 +233,28 @@
     }
    ],
    "source": [
-    "'THis'.casefold() # converts "
+    "'THis'.casefold() # converts to lower case, intended to remove all case distinctions in a string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "bab8abab-0321-4505-a320-ab32ec3f99f6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'&'"
+       "'ss'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'&'.casefold() # converts "
+    "'ß'.casefold() # a aggresive lowercase converter"
    ]
   },
   {
@@ -287,38 +287,138 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0defd21f",
+   "metadata": {},
+   "source": [
+    "### count"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "7a752128-c3ae-42dd-bf5e-31f2df398ad3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hhi This Is This'"
+       "1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'hhi THis is THIS'.title()"
+    "'hhi THis is THIS'.count('hi') # counts the overlapped text in argument"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "28e06c62-be49-471c-bc10-384feff96ed5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'hhi THis is THIS'.count('THIS', 12,16)  ## numbers are original string slicing indexes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4357cd2f",
+   "metadata": {},
+   "source": [
+    "### encode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c81d49b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\x88\\x89@\\xa3\\x88\\x89\\xa2@\\x89\\xa2@\\xe4\\xe3\\xc6`\\xf8@\\x83\\x96\\x84\\x85\\x84'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'hi this is UTF-8 coded'.encode('cp273') #encoded to GERMAN codec"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84b7d68f",
+   "metadata": {},
+   "source": [
+    "### endswith"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0c594764",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'this is end'.endswith('end') # Return True if the string ends with the specified suffix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c421048c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'this is a end'.endswith('a' , 6, 9)  ## slices the original string"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.9 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -333,6 +433,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3a2b94eab880d9510ce6ab088e2527b76546ed0dee7591e5d5a7ce69e4d46df7"
+   }
   }
  },
  "nbformat": 4,
