Adding standard methods of str class v2

--- a/Day 2/String.ipynb
+++ b/Day 2/String.ipynb
@@ -412,8 +412,298 @@
     }
    ],
    "source": [
-    "'this is a end'.endswith('a' , 6, 9)  ## slices the original string"
+    "'this is a end'.endswith('a' , 6, 9)  ## numbers slices the original string"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ca8ab63",
+   "metadata": {},
+   "source": [
+    "### expandtabs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "8f526d68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is    a   tab'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'this is    a   tab'.expandtabs(16) # not so useful"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53ddc43e",
+   "metadata": {},
+   "source": [
+    "### find"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dcee00b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'this a'.find('is' , 0,5) ## numbers slices the original string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f57b3c49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find method should be used only if you need to know the position of sub. \n",
+    "# To check if sub is a substring or not, use the 'in' operator:\n",
+    "'is' in 'this is'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88a9b399",
+   "metadata": {},
+   "source": [
+    "### format  - https://docs.python.org/3/library/string.html#format-examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "76dfd4eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this sum is 3, diff is 1'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'this sum is {}, diff is {}'.format(1+2, 2-1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "744d60d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c, b, a'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'{2}, {1}, {0}'.format(*'abc')      # unpacking argument sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "085bea63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'+3.1 ; -1222223.14'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'{:+.1f} ; {:+.2f}'.format(3.14874982378472983748, -1222223.14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d446f6d",
+   "metadata": {},
+   "source": [
+    "### index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cdee2e25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'this a'.index('is' , 0,5) ## numbers slices the original string \n",
+    "## similar to find but raises ValueError if substring not found"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "487b673f",
+   "metadata": {},
+   "source": [
+    "### isalnum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e3acbd91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### returns True: \n",
+    "# if c is :\n",
+    "# c.isalpha(), \n",
+    "# c.isdecimal(), \n",
+    "# c.isdigit(), \n",
+    "# or c.isnumeric().\n",
+    "\n",
+    "'this4'.isalnum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52f60713",
+   "metadata": {},
+   "source": [
+    "### is ascii"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f9438218",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'this'.isascii()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc213188",
+   "metadata": {},
+   "source": [
+    "### isidentifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e07220b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'this'.isidentifier()  # did not able to understand it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfd013aa",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41be09ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
