--- a/Day 2/String.ipynb
+++ b/Day 2/String.ipynb
@@ -695,12 +695,298 @@
    "cell_type": "markdown",
    "id": "dfd013aa",
    "metadata": {},
-   "source": []
+   "source": [
+    "### islower"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "41be09ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'This'.islower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "929857c4",
+   "metadata": {},
+   "source": [
+    "### isprintable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "26836aca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'3883'.isprintable()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb979860",
+   "metadata": {},
+   "source": [
+    "### isspace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "07fdbe53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'ff'.isspace()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c71e2a2",
+   "metadata": {},
+   "source": [
+    "### istitle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c8c9d7ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Title'.istitle()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e895c978",
+   "metadata": {},
+   "source": [
+    "### isupper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "13880f5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'U'.isupper()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87c79330",
+   "metadata": {},
+   "source": [
+    "### join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c451e3a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' 1this 2this 3'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'this'.join([' 1',' 2',' 3'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b64d47f",
+   "metadata": {},
+   "source": [
+    "### ljust"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "642db314",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hsdflasl||||||||||||'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'hsdflasl'.ljust(20, '|')  # left alignment, second arg is the padding string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fb34ad3",
+   "metadata": {},
+   "source": [
+    "### lower"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "56c74e94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'utidh'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'UTIDH'.lower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b66cb937",
+   "metadata": {},
+   "source": [
+    "### lstrip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "06b8d843",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'wcwwexamplecom'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'ccwcwwexamplecom'.lstrip('cmoze')  # keeps on removing the left most char from the substring char until beat is missed, \n",
+    "#see the char c in wcwwexamplecom all other c char are removed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a01764c5",
+   "metadata": {},
+   "source": [
+    "### maketrans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "08bbb872",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "if you give only one argument to maketrans it must be a dict",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/sayantan.mandal/Documents/my_works/python_works/py-data-structures/Day 2/String.ipynb Cell 57\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sayantan.mandal/Documents/my_works/python_works/py-data-structures/Day%202/String.ipynb#Y114sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m'\u001b[39;49m\u001b[39msdfsdf\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m.\u001b[39;49mmaketrans(\u001b[39m1\u001b[39;49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: if you give only one argument to maketrans it must be a dict"
+     ]
+    }
+   ],
+   "source": [
+    "'sdfsdf'.maketrans(1)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41be09ba",
+   "id": "0c6faef4",
    "metadata": {},
    "outputs": [],
    "source": []
